<resources>
    <string name="app_name">News 24/7</string>
    <string name="separator">•</string>
    <string name="published_at_example">Published at 2018–07–19 14:01</string>
    <string name="section_example">Indian Express</string>
    <string name="title_example">NDA set to sail through no-trust motion; Shiv Sena, AIADMK to back Modi government</string>
    <string name="no_internet_connection">Internet connection is not available</string>
    <string name="no_data_found">No data found from NEWS API</string>

    <string name="slide_1_title">Welcome to News 24/7</string>
    <string name="slide_1_desc">The easiest way to read news article anytime!</string>

    <string name="slide_2_title">Filter or Search news</string>
    <string name="slide_2_desc">Filter news or search according to topic, country and more!</string>

    <string name="slide_3_title">New articles in real time</string>
    <string name="slide_3_desc">New articles available almost instantly!</string>

    <string name="slide_4_title">News articles from different news websites</string>
    <string name="slide_4_desc">Get news articles from websites like News API, oneIndia, etc</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="it_has_news_paper_icon_init">It has news paper icon init</string>
    <string name="it_has_new_icon">It has \'New\' icon</string>
    <string name="it_has_filter_icon">It has filter icon</string>
    <string name="it_has_news_icon">It has news icon</string>
    <string name="first_name_example">Syed</string>
    <string name="article_thumbnail">article thumbnail</string>

    <string name="default_no_of_news_articles">20</string>
    <string name="number_of_articles_key">number_of_articles</string>
    <string name="number_of_articles_label">Number of articles to load</string>

    <string name="settings_menu_label">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="author_name_key">author_name</string>
    <string name="default_show_author_name">true</string>
    <string name="show_author_name_label">Show author name</string>
    <string name="show_author_name_summary">Shows author name or contributor name of news article</string>
    <string name="show_article_images_label">Show article images</string>
    <string name="show_article_images_key">show_article_images</string>
    <string name="default_show_article_images">true</string>
    <string name="show_article_images_summary">Shows images of articles</string>
    <string name="weather_city_title">City</string>
    <string name="weather_city_key">weather_city</string>
    <string name="weather_city_default">delhi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="temperature_value_default">\?</string>
    <string name="weather_icon_description">Shows weather icon</string>
    <string name="navigation_header_image_description">Navigation header</string>

    <string name="fragment_1_title">Top Headlines</string>
    <string name="fragment_2_title">Science</string>
    <string name="fragment_3_title">Technology</string>
    <string name="fragment_4_title">Business</string>
    <string name="fragment_5_title">Health</string>
    <string name="fragment_6_title">Entertainment</string>
    <string name="fragment_7_title">Sports</string>

    <string name="navigation_section_tools_title">Tools</string>
    <string name="navigation_settings_title">Settings</string>
    <string name="menu_search_item_title">Search</string>
    <string name="share_article_link_hint">Share link</string>
    <string name="weather_temperature_concatenate">%1$s ℃ - %2$s</string>
    <string name="language_menu_label">Change language</string>
    <string name="navigation_change_language_title">Change Language</string>
    <string name="activity_language_selection_title">Choose language</string>
    <string name="english_button_text">English</string>
    <string name="telugu_button_text">TELUGU</string>
    <string name="change_language_hint_text">You can also change language later in Navigation drawer or in menu item.</string>
    <string name="menu_share_app_item_title">Share app</string>
    <string name="detect_city_automatically_key">detect_city_automatically</string>
    <string name="detect_city_automatically_title">Detect city automatically</string>
    <string name="detect_city_automatically_default">true</string>
    <string name="detect_city_automatically_summary">Need location permission to work or turn off and enter city name below</string>

</resources>
