<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="News 24/7 Settings">

    <PreferenceCategory
        android:title="Weather settings"/>

    <EditTextPreference
        android:defaultValue="@string/weather_city_default"
        android:inputType="text"
        android:key="@string/weather_city_key"
        android:selectAllOnFocus="true"
        android:title="@string/weather_city_title"/>

    <PreferenceCategory
        android:title="Article settings"/>

    <EditTextPreference
        android:defaultValue="@string/default_no_of_news_articles"
        android:inputType="number"
        android:key="@string/number_of_articles_key"
        android:selectAllOnFocus="true"
        android:title="@string/number_of_articles_label"/>

    <SwitchPreference
        android:title="@string/show_author_name_label"
        android:key="@string/author_name_key"
        android:defaultValue="@string/default_show_author_name"
        android:summary="@string/show_author_name_summary"/>

    <SwitchPreference
        android:title="@string/show_article_images_label"
        android:key="@string/show_article_images_key"
        android:defaultValue="@string/default_show_article_images"
        android:summary="@string/show_article_images_summary"/>

</PreferenceScreen>