<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news_feed_nav_item"
            android:checked="true"
            android:icon="@drawable/ic_list"
            android:title="@string/fragment_1_title" />
        <item
            android:id="@+id/science_nav_item"
            android:icon="@drawable/science"
            android:title="@string/fragment_2_title" />
        <item
            android:id="@+id/technology_nav_item"
            android:icon="@drawable/ic_technology"
            android:title="@string/fragment_3_title" />
        <item
            android:id="@+id/business_nav_item"
            android:icon="@drawable/ic_business"
            android:title="@string/fragment_4_title" />
        <item
            android:id="@+id/health_nav_item"
            android:icon="@drawable/ic_health"
            android:title="@string/fragment_5_title"/>
        <item
            android:id="@+id/entertainment_nav_item"
            android:icon="@drawable/ic_entertainment"
            android:title="@string/fragment_6_title"/>
        <item
            android:id="@+id/sports_nav_item"
            android:icon="@drawable/ic_sports"
            android:title="@string/fragment_7_title"/>
        <item
            android:id="@+id/sources_nav_item"
            android:title="Sources"/>
    </group>

    <item android:title="@string/navigation_section_tools_title">

        <menu>

            <item
                android:id="@+id/settings_nav_item"
                android:icon="@drawable/ic_settings"
                android:title="@string/navigation_settings_title" />

            <item
                android:id="@+id/change_language_nav_item"
                android:icon="@drawable/ic_language"
                android:title="@string/navigation_change_language_title"/>

            <item
                android:id="@+id/share_app_nav_item"
                android:title="@string/menu_share_app_item_title"/>

        </menu>
    </item>
</menu>