<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen4">

    <ImageView
        style="@style/slideImageAttributes"
        android:contentDescription="@string/it_has_news_paper_icon_init"
        android:src="@drawable/newspapers_icon" />

    <TextView
        android:id="@+id/tutorial_title"
        style="@style/slideTitleAttributes"
        android:text="@string/slide_4_title" />

    <TextView
        style="@style/slideDescAttributes"
        android:text="@string/slide_4_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/made_with_love_for_udacity"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_desc_textSize" />

</RelativeLayout>