<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Activities.LanguageSelectionActivity">

    <TextView
        android:id="@+id/choose_language_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_language_selection_title"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/english_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/english_button_text"
        android:layout_marginTop="50dp"
        android:layout_below="@id/choose_language_title"/>

    <Button
        android:id="@+id/telugu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telugu_button_text"
        android:layout_marginTop="50dp"
        android:layout_below="@id/english_button"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/change_language_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:text="@string/change_language_hint_text"
        android:layout_below="@id/telugu_button"/>

</RelativeLayout>