<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/LI_main_card_view_margin_bottom"
        android:layout_marginEnd="@dimen/LI_main_card_view_margin_end"
        android:layout_marginLeft="@dimen/LI_main_card_view_margin_start"
        android:layout_marginRight="@dimen/LI_main_card_view_margin_end"
        android:layout_marginStart="@dimen/LI_main_card_view_margin_start"
        android:layout_marginTop="@dimen/LI_main_card_view_margin_top"
        app:cardCornerRadius="@dimen/card_corner_radius_for_all"
        app:cardElevation="@dimen/main_card_elevation"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sectionTextView"
                style="@style/articleAttributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="@string/section_example" />

            <android.support.v7.widget.CardView
                style="@style/articleAttributes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/card_corner_radius_for_all"
                app:cardElevation="@dimen/article_image_card_elevation">

                <ImageView
                    android:id="@+id/thumbnailImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/article_thumbnail" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/titleTextView"
                style="@style/articleAttributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/title_example"
                android:textColor="@android:color/black"
                android:textSize="@dimen/article_title_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/article_marginStart"
                    android:layout_height="@dimen/article_marginStart" />

                <TextView
                    android:id="@+id/firstNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/first_name_example"
                    android:textSize="@dimen/article_publishedTime_text_size" />

                <TextView
                    android:id="@+id/lastNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/last_name_text_view_margin_start"
                    android:layout_marginStart="@dimen/last_name_text_view_margin_start"
                    tools:text="@string/last_name_example"
                    android:textSize="@dimen/article_publishedTime_text_size" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/separator_gap_both_sides"
                    android:layout_marginStart="@dimen/separator_gap_both_sides"
                    tools:text="@string/separator"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/publishedAtTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/article_marginBottom"
                    tools:text="@string/published_at_example"
                    android:textSize="@dimen/article_publishedTime_text_size" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>