<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="@dimen/weather_icon_width_and_height"
                    android:layout_height="@dimen/weather_icon_width_and_height"
                    android:layout_marginTop="@dimen/weather_icon_margin_top"
                    android:layout_marginEnd="@dimen/weather_icon_right_margin"
                    android:layout_marginRight="@dimen/weather_icon_right_margin"
                    android:layout_toStartOf="@id/weather_temp"
                    android:layout_toLeftOf="@id/weather_temp"
                    android:contentDescription="@string/weather_icon_description"
                    android:src="@drawable/unknown" />

                <TextView
                    android:id="@+id/weather_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/weather_temp_height"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/weather_temp_margin_top"
                    android:layout_marginEnd="@dimen/weather_temp_right_margin"
                    android:layout_marginRight="@dimen/weather_temp_right_margin"
                    android:paddingTop="@dimen/weather_temp_padding_top"
                    android:text="@string/temperature_value_default"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/weather_icon"
                    android:orientation="vertical" />

            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/no_data_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data_found"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/loading_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_internet_connection"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/banner_ad_news_feed"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner_ad_news_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4795017891549742/4347560199"
        android:layout_marginBottom="11dp"/>
        <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
</RelativeLayout>
